@@ -14,7 +14,7 @@ dnl AC_DIVERT_PUSH(AC_DIVERSION_NOTICE)dnl
 #
 RNUMBER_MAJOR_VERSION=1
 RNUMBER_MINOR_VERSION=13
-RNUMBER_MICRO_VERSION=5
+RNUMBER_MICRO_VERSION=6
 RNUMBER_INTERFACE_AGE=0
 RNUMBER_BINARY_AGE=0
 RNUMBER_VERSION=$RNUMBER_MAJOR_VERSION.$RNUMBER_MINOR_VERSION.$RNUMBER_MICRO_VERSION
