@@ -1,3 +1,9 @@
+2003-01-06  Todd Dukes  <Todd.Dukes@motorola.com>
+
+	* removed dist-hook to remove rvparser.yy from ./Makefile.am this
+          file was never part of rnumber.
+	* changes so that 'make dist' makes a buildable distribution.
+
         ============== rnumber release 1.13.5 (v1_13_5) on SunOS ==============
 
         ============== rnumber release 1.13.4 (v1_13_4) on SunOS ==============
